src/blocks/profile.css
.profile {
  display: flex;
  padding: 34px 0 20px;
  border-bottom: 1px rgba(33, 33, 33, 0.4) solid;
}
.profile__avatar {
  width: 190px;
  height: 190px;
  border-radius: 8px;
}
.profile__avatar-container {
  position: relative;
  margin-right: 20px;
  border-radius: 8px;
}
.profile__avatar-button {
  position: absolute;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-end;
  justify-content: center;
  visibility: hidden;
  border-radius: 8px;
}
.profile__avatar-container:hover .profile__avatar-button {
  visibility: visible;
}
.profile__avatar-button::after {
  content: "Edit Avatar";
}

.profile__column {
  display: flex;
  flex-direction: column;
}
.profile__name {
  margin: 0 0 12px;
  font-size: 32px;
  line-height: 1;
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
}
.profile__description {
  margin: 0;
  font-size: 16px;
  line-height: 1;
  display: -webkit-box;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
  max-width: 420px;
}
.profile__edit-button {
  margin-top: auto;
  height: 16px;
  width: 108px;
  font-size: 16px;
  line-height: 1;
  border: none;
  background-color: #fcf5e5;
  display: flex;
  gap: 8px;
  padding: 0;
  color: #212121;
  opacity: 0.7;
  cursor: pointer;
}
.profile__edit-button:hover {
  opacity: 1;
}
.profile__add-button {
  color: #fcf5e5;
  margin-left: auto;
  background-color: #212121;
  padding: 18px 24px;
  height: 52px;
  margin-top: auto;
  display: flex;
  align-items: center;
  gap: 8px;
  justify-content: center;
  border-radius: 10px;
  cursor: pointer;
}
.profile__add-button:hover {
  opacity: 0.8;
}
.profile__add-button-icon {
  width: 12px;
  height: 12px;
}
@media screen and (max-width: 630px) {
  .profile {
    flex-direction: column;
    max-width: 288px;
    align-items: center;
    text-align: center;
    padding-top: 20px;
  }
  .profile__avatar-button {
    visibility: visible;
  }
  .profile__avatar-button::after {
    content: "";
  }
  .profile__avatar {
    margin: 0 0 12px;
    height: 80px;
    width: 80px;
  }
  .profile__name {
    font-size: 20px;
    margin: 0 0 6px;
    max-width: 288px;
  }
  .profile__description {
    margin: 0 0 32px;
    max-width: 288px;
  }
  .profile__column {
    margin: 0 0 20px;
  }
  .profile__add-button {
    margin: 0;
    width: 100%;
  }
  .profile__edit-button {
    align-items: center;
    margin: 0 auto;
  }
}

